homepage - fix breakpoint and card layout issues

--- a/_sass/summer-night-jekyll.scss
+++ b/_sass/summer-night-jekyll.scss
@@ -673,10 +673,10 @@ ul.nav-links {
 
     div.homepage-card-text {
       @include large {
-        height: 6.3rem;
+        height: 7rem;
       }
       @include medium {
-        height: 6.3rem;
+        height: 7rem;
       }
       padding: 0 1rem 1rem;
       margin: 0;
