--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,4 @@
-$large-breakpoint: 880px !default;
+$large-breakpoint: 840px !default;
 $medium-breakpoint: 680px !default;
 
 // Dark theme
